--- a/public/styles.css
+++ b/public/styles.css
@@ -19,7 +19,10 @@ body {
 
 img {
     border-radius: 50%;
-    width: 100px;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .center {
