--- a/public/styles.css
+++ b/public/styles.css
@@ -19,8 +19,8 @@ body {
 
 img {
     border-radius: 50%;
-    width: 50%;
-    display: block;
+    max-width: 25%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
 }
