--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@ img {
     border-radius: 50%;
     max-width: 25%;
     height: auto;
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
