--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 /* Place your CSS styles in this file */
 
-h1 {
+h1, h2 {
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-weight: bold;
