--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,16 @@
 /* Place your CSS styles in this file */
 
-h1, h2 {
+h1 {
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     color: aliceblue;
     font-size: 5vw;
+}
+
+h2 {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
 }
 
 p {
